--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
    "license": "MIT",
    "dependencies": {
       "bcryptjs": "^2.4.3",
+      "cloudinary": "^1.30.1",
       "cors": "^2.8.5",
       "dotenv": "^16.0.1",
       "express": "^4.18.1",
       "jsonwebtoken": "^8.5.1",
-      "mongoose": "^6.4.4"
+      "mongoose": "^6.4.4",
+      "mongoose-slug-plugin": "^2.1.0"
    },
    "devDependencies": {
       "@types/bcryptjs": "^2.4.2",
